k8s/services/ad-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-service
  namespace: shopno-platform
spec:
  selector:
    app.kubernetes.io/name: ad-service
  ports:
  - name: http
    port: 8080
    targetPort: http
